--- a/html/ex010/index.html
+++ b/html/ex010/index.html
@@ -10,5 +10,11 @@
     <h1>Usando Links Externos</h1>
     <p>Você pode acessar o meu <a href="https://github.com/jeferson0306" target="_blank" rel="external" >repositório público no GitHub</a></p> <!--coloar com target e rel irá abrir uma nova aba-->
     <p>Você também pode acessar o meu <a href="https://www.youtube.com/?hl=pt&gl=BR" target="_blank" rel="external" >canal gratuito no YouTube</a></p>
+    <p>Esta é a primeira página do site. Se você quiser, também pode acessar a minha <a href="pag002.html" rel="next">segunda página</a></p>
+    <p>Você também pode acessar a <a href="noticias/pag003.html">página de notícias</a></p>
+
+    <h1>Links para download</h1>
+    <li> <a href="Livros/Operadores+Java+-+Tabela+de+Precedência.pdf" download="meulivro.pdf" type="application/pdf"download="meulivro.pdf" type="application/zip">Baixar o livro em PDF</a></li> <!--exemplificação, se fosse com zip-->
+    <li><a href="Livros/Operadores+Java+-+Tabela+de+Precedência.pdf">  Livro compactado em ZIP</a></li>
 </body>
 </html>
